--- a/src/assets/scss/pages/about/base.sass
+++ b/src/assets/scss/pages/about/base.sass
@@ -12,7 +12,6 @@
 
     +respond-at($breakpoint-L)
       flex-direction: row
-      justify-content: space-between
       align-items: center
       margin-top: 0
 
